# spimex_EM_fastapi

./: .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 34e7b1fffd85_0001_initial.py
src/: config.py  logging_config.py  main.py
src/api/v1/handlers/: dynamics.py  last_trading_dates.py  trading_results.py
src/api/v1/schemas/: schemas.py
src/api/v1/services/: dynamics.py  last_trading_dates.py
src/cache/: cache_services.py  redis_client.py
src/database/: database.py
src/models/: spimex.py
src/tasks/: scheduler.py
tests/: conftest.py
tests/fixtures/: test_cases.py
tests/fixtures/postgres/: spimex_trading_results.py
tests/unit/api/v1/handlers/: test_dynamics_handler.py  test_last_trading_dates_handler.py  test_trading_results_handler.py
