[tool.poetry]
name = "poetry install"
version = "0.1.0"
description = ""
authors = ["Anton Korol <korol142@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
bs4 = "^0.0.2"
xlrd = "^2.0.1"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
aiohttp = "^3.10.10"
fastapi = "^0.115.5"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
redis = "^5.2.0"
apscheduler = "^3.10.4"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
pytest = "^8.3.3"
trio = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
